k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
  namespace: dev
spec:
  selector:
    app: nginx-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
